--- a/edupulse/edupulse/backend/requirements.txt
+++ b/edupulse/edupulse/backend/requirements.txt
@@ -22,14 +22,16 @@ ml-dtypes==0.4.0
 numpy==2.1.0
 opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
-opt-einsum==3.3.0
+# opt-einsum==3.3.0
 packaging==24.1
 pillow==10.4.0
-protobuf==4.25.4
+# protobuf==4.25.4
 pycparser==2.22
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
-scipy==1.14.1
+# scipy==1.14.1
 six==1.16.0
 sounddevice==0.5.0
 Werkzeug==3.0.4
+# REMOVE jaxlib or comment it out
+# jaxlib==0.4.31
